# fintela_case

./: .env  .gitignore  ARCHITECTURE.md  DAGSTER_STRUCTURE.md  Dockerfile.dagster  Dockerfile.dashboard  Dockerfile.fastapi  README.md  create_test_portfolios.py  docker-compose.yml  docker-entrypoint.sh  extra_indexes.sql  portfolios.sql  pyproject.toml  risk_scores.sql  run_api.py  test_db_connection.py
dashboard/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: HighRiskTable.jsx  PoorPerformersTable.jsx  RiskChart.jsx  SummaryCards.jsx
data/: convert_to_sql.py  fund_labels_202511180330.csv
scripts/: init_db.py  setup.sh
src/case_study/: __init__.py  definitions.py  tefas_parser.py  test_crawler.py
src/case_study/api/: database.py  main.py  models.py
src/case_study/api/routes/: alerts.py  portfolios.py
src/case_study/db/: models.py
src/case_study/defs/: __init__.py  assets.py  jobs.py  resources.py  schedules.py
